<resources>
    <string name="app_name">VCity</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale" translatable="false">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="nav_life">Life</string>
    <string name="nav_meetings">Meetings</string>
    <string name="nav_event">Events</string>
    <string name="nav_profile">Profile</string>
    <string name="empty_field">Fill all the fields</string>
    <string name="prompt_name">Name</string>
    <string name="action_register">Register</string>
    <string name="prompt_password">Password</string>
    <string name="action_pick_date">Pick birth date</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="action_register_short">Register</string>
    <string name="error_age">Only adults is allowed</string>
    <string name="weak_password">Too weak password</string>
    <string name="messages">Messages</string>
    <string name="user">User</string>
    <string name="add_event">New event</string>
    <string name="found_pattern">Found %1$d %2$s!</string>
    <string name="add">Add</string>
    <string name="plural_event">events</string>
    <string name="plural_meet">meets</string>
    <string name="plural_party">parties</string>
    <string name="error">Error</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="action_post">POST</string>
    <string name="warning">Warning</string>
    <string name="event">Event</string>
</resources>
