<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/d80"
        android:paddingLeft="@dimen/d8"
        android:paddingRight="@dimen/d8"
        android:gravity="center">

        <TextView
            android:id="@+id/btn_expand"
            android:layout_width="0dp"
            android:layout_height="@dimen/d80"
            android:layout_weight="1"
            android:text="@string/found_pattern"
            android:drawableTop="@drawable/ic_double_arrow_up"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

        <ImageView
            android:id="@+id/btn_add"
            android:layout_width="@dimen/d72"
            android:layout_height="@dimen/d72"
            app:srcCompat="@drawable/ic_plus"/>
    </LinearLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_marginTop="@dimen/d8"
        android:layout_marginBottom="@dimen/d12"
        android:layout_marginStart="@dimen/d8"
        android:clipChildren="false"
        android:overScrollMode="never"
        app:layoutManager="com.ramotion.cardslider.CardSliderLayoutManager"
        app:viewUpdater="com.vardemin.vcity.util.CardsUpdater">

    </android.support.v7.widget.RecyclerView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:text="@string/event"/>

    <TextSwitcher
        android:id="@+id/switcher_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/d16"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:text="1"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_margin="@dimen/d16"/>
    </TextSwitcher>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:text="@string/description"/>

    <TextSwitcher
        android:id="@+id/switcher_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/d16"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:text="1"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_margin="@dimen/d16"/>
    </TextSwitcher>



</LinearLayout>